<resources>
    <string name="app_name">Sound Identifier</string>

    <string name="action_settings">Settings</string>
    <string name="action_my_library">My Library</string>
    <string name="action_about">About</string>

    <string name="audio_record_activity">Audio record</string>
    <string name="record_button">Record</string>
    <string name="open_file">Open File</string>
    <string name="list_files">Saved audio files</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="clear_my_library">Delete records in My Library</string>
    <string name="connection_settings">Connect to server settings</string>
    <string name="connection_settings_title">Connection settings</string>
    <string name="connection_settings_summary">Click to change server\'s IP address</string>
    <string name="save_to_db_switch">Save track\'s info in My Library</string>
    <string name="save_recordings">Save recordings</string>
    <string name="save_recordings_summary">Save recordings into the device</string>
    <string name="vibrate_device_switch_title">Vibrate</string>
    <string name="vibrate_device_switch_summary">Turn on to vibrate once recording finishes</string>
    <!--<string name="geotagging_switch_title">Geotagging</string>
    <string name="geotagging_switch_summary">Save location metadata in My Library</string>-->
    <string name="advanced_settings">Advanced Settings</string>
    <string name="playback_track">Playback track</string>
    <string name="playback_track_summary">Turn on to play the recorded audio</string>
    <string name="duration_recording">Duration of recording (in seconds)</string>
    <string name="duration_recording_summary">Click to set up the duration of the recording</string>
    <string name="choose_audio_file">Choose audio file</string>
    <!--<string name="aac_supported">Only .aac file format is supported</string>-->
    <string name="results">Results</string>
    <string name="recording_text_view">Recording in progress…</string>
    <string name="stop_recording_button">Stop</string>
    <string name="generic_error_message">An error occurred.</string>
    <string name="malformed_ip_address">The IP address you inserted is malformed.</string>
    <string name="connection_error">Please check your Internet connection or your connection settings.</string>
    <string name="no_result">No result</string>
    <!--<string name="title_activity_settings">Settings</string>-->

    <string name="notification">Notification</string>
    <string name="noRecord">Nothing to show.</string>

    <string name="audio_title">Title:</string>
    <string name="date">Date:</string>

    <string name="warning">Warning</string>
    <string name="clear_my_library_dialog">You are about to delete the contents of My Library. Do you wish to proceed?</string>

    <string name="play_delete_dialog_title">Pick an option</string>

    <string name="file_deleted">File was deleted.</string>
    <string name="file_not_deleted">File was not deleted.</string>

    <string name="database_insert_failed">Insert to My Library failed.</string>

    <string name="playing_started">Started playing.</string>

    <string name="no_mic_permission">No mic permission given.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>

